Fix for image paths. Fix for vertical size of the page. Overlay menu z-index fix

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -24,6 +24,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: 1;
     background-image: linear-gradient($darkBlue, transparent);
   }
 
@@ -32,6 +33,7 @@
     background-color: $white;
     padding-top: 1.0625rem;
     padding-bottom: 1.0625rem;
+    z-index: 1;
   }
 
   &__logo {
@@ -62,6 +64,7 @@
     position: absolute;
     width: calc(100% - 3rem);
     left: 50%;
+    z-index: 1;
     transform: translateX(-50%);
     background-color: $white;
     margin-top: 1.5rem;
