--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,6 @@ body {
   font-weight: 300;
   color: #9698a6;
   line-height: 1.3;
-  min-height: 300vh;
   overflow-x: hidden;
 }
 
@@ -304,6 +303,7 @@ button:hover::before, .button:hover::before {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#2d314d), to(transparent));
   background-image: linear-gradient(#2d314d, transparent);
 }
@@ -313,6 +313,7 @@ button:hover::before, .button:hover::before {
   background-color: white;
   padding-top: 1.0625rem;
   padding-bottom: 1.0625rem;
+  z-index: 1;
 }
 
 .header__logo img {
@@ -339,6 +340,7 @@ button:hover::before, .button:hover::before {
   position: absolute;
   width: calc(100% - 3rem);
   left: 50%;
+  z-index: 1;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   background-color: white;
@@ -406,7 +408,7 @@ button:hover::before, .button:hover::before {
 
 .hero__image {
   position: relative;
-  background-image: url("/images/bg-intro-mobile.svg");
+  background-image: url("../images/bg-intro-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -439,7 +441,7 @@ button:hover::before, .button:hover::before {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("/images/bg-intro-desktop.svg");
+    background-image: url("../images/bg-intro-desktop.svg");
     background-repeat: no-repeat;
     background-position: center bottom;
     width: 150%;
@@ -453,7 +455,7 @@ button:hover::before, .button:hover::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("/images/image-mockups.png");
+  background-image: url("../images/image-mockups.png");
   background-size: 93%;
   background-repeat: no-repeat;
   background-position: center bottom;
